fix overlap

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -62,21 +62,28 @@
 
 /* About Me */
 
-#about-me {
+.about-me {
   padding: 10px;
   transition: box-shadow 0.3s ease;
   border-radius: 10px;
+  box-shadow: 0px 0px 10px #54dfd8;
+  margin-top: 20px; /* 추가된 부분: 여백 설정 */
+  background-color: white; /* 배경색 추가 */
 }
 
 .introduction {
   font-size: 17px;
 }
 
-#about-me:hover {
+/* #about-me:hover {
   box-shadow: 0px 0px 10px #54dfd8;
-}
+} */
+
 /* Projects */
 
+#projects {
+  margin-top: 100px;
+}
 .projects {
   min-height: 280px;
   border: 1px solid gray;
@@ -86,6 +93,7 @@
 }
 .project {
   padding: 20px;
+  font-size: 17px;
 }
 
 .projects:hover {
